--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1591,6 +1591,40 @@ nav#overlay {
   
 }
 
+#hotels {
+  .row {
+    .hotel {
+      h4 {
+        font-size: 1rem;
+        margin: 1em 0 0;
+      }
+
+      table {
+        font-size: 0.875em;
+
+        td {
+          border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+
+          &.price {
+            text-align: right;
+          }
+        }
+      }
+
+      ul li {
+        display: inline-block;
+        margin-right: 1ex;
+
+        a {
+          font-size: 14px;
+          font-weight: 500;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
 .google-map {
 
   img, picture {
