--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1617,6 +1617,14 @@ nav#overlay {
           color: #6c7173; }
         .agenda .day .event-list .event .short .name {
           position: relative; }
+          .agenda .day .event-list .event .short .name figure {
+            margin: 0 0 20px;
+            width: 120px;
+            height: 120px;
+            border-radius: 100%;
+            display: block;
+            background-size: cover;
+            background-position: center center; }
           .agenda .day .event-list .event .short .name .title {
             font-size: 1.25em;
             font-weight: 600;
